--- a/Stop.tex
+++ b/Stop.tex
@@ -58,12 +58,12 @@ In this chapter, various analysis strategies for a search for top squarks at $\s
 \end{tabular}}
 \label{tab:stop_samples}
 \end{table}    
-The studies presented in this chapter are based on simulated samples at $\sqrt{s} = 13$\tev. However, the pileup scenario considered for the samples is the same as for conditions present at $\sqrt{s} = 8$\tev including out-of-time pileup according to a bunch spacing of 50\,ns. Although these are not the pileup conditions expected for $\sqrt{s} = 13$\tev, the selections studied here typically are based on objects with high transverse momenta such that influences from pileup are supposed to be negligible in good approximation. Nevertheless, possible disturbing effects and performance degradation due to pileup necessarily have to be studied as soon as first collision data at $\sqrt{s} = 13$\tev are available. \\
-The processes considered in the analysis for background and signal events are summarized in Tab.~\ref{tab:stop_samples}. \WJets, \ZJets and QCD multijet events are generated with MadGraph5 using the PDF CTEQ6L1 while \ttbar events are generated with POWHEG and the MSTW2008 PDF. For all samples the showering process is performed with PYTHIA6 Tune Z2-star. \\
-The process \WJets includes decays with $W \rightarrow l \nu$ with up to two jets. Similarly, also the process \ZJets includes up to two jets. Here, decays $Z \rightarrow \nu \nu$ are modelled. For these processes, cross sections are considered at leading order. The scale factors to NLO cross sections are 1.04 and 1.07 for \WJets and \ZJets, respectively. \\
-For background processes \WJets, \ZJets and QCD, samples are generated for different \HT selections at generator level. This procedure ensures that especially for the kinematic regions under study which typically concentrate on high-\pt objects a sufficient number of events is generated. \\
-In order to study signal events, two different processes are generated. On the one hand direct stop-pair production is considered in which the $\tilde{t}$ always decays to a stable neutralino $\tilde{\chi}_{0}^{1}$ and a top quark with mass $m_{t} = 172.5$\gev including all decay channels of the top quark. These samples are generated with different neutralino masses of 50, 100, 150, 200, 250, 300 and 350\gev. On the other hand gluino-pair production is generated with a decay $\tilde{g} \rightarrow \ttbar \tilde{\chi}_{0}^{1}$. For the top quark only fully hadronic decays are simulated. The cross section given in Tab.~\ref{tab:stop_samples} for gluino-pair production is corrected for the hadronic branching fraction of the top quark. The neutralino mass is fixed to 50\gev. \\
-All samples are normalized to an integrated luminosity of 19.5\fbinv which corresponds to the same amount of data recorded at $\sqrt{s} =8$\tev.
+The studies presented in this chapter are based on simulated samples at $\sqrt{s} = 13$\tev. These are processed with the fast detector simulation and consider the pileup scenario as it was present at $\sqrt{s} = 8$\tev including out-of-time pileup according to a bunch spacing of 50\,ns. Although these are not the pileup conditions expected for $\sqrt{s} = 13$\tev, the selections studied here typically are based on objects with high transverse momenta such that influences from pileup are negligible in good approximation. Moreover, the studies presented in this chapter are focusing on the identification of general analysis strategies comparing the relative performance of different selections, such that also simplifications caused by the use of the fast detector simulation are not explicitly accounted for. Some discussion about the impact of these simplifications concerning the analysis sensitivity follows in Sec.~\ref{sec:stop_results}.  \\
+The processes considered in the analysis are summarized in Tab.~\ref{tab:stop_samples}. \WJets, \ZJets and QCD multijet events are generated with \textsc{Madgraph5}~\cite{Alwall:2007st} using the PDF CTEQ6L1~\cite{Pumplin:2002vw}, while \ttbar events are generated with \powheg~\cite{Oleari:2010nx} and the MSTW2008 PDF~\cite{Martin:2009iq}. For all samples, the showering process is performed with \textsc{Pythia6}~\cite{Sjostrand:2006za} Tune Z2star. \\
+The process \WJets includes decays with $W \rightarrow l \nu$ with up to two jets modelled in the matrix element. Similarly, also the process \ZJets includes up to two jets. Here, decays $Z \rightarrow \nu \nu$ are modelled. For these processes, cross sections at NLO are obtained by applying scale factors computated with \powheg to the leading order cross sections. These scale factors amount to 1.04 and 1.07 for \WJets and \ZJets, respectively. The cross section calculation for \ttbar events is obtained from \textsc{Hathor}~\cite{Aliev:2010zk}. \\
+For background processes \WJets, \ZJets and QCD, samples are generated for different \HT selections at generator level. This procedure ensures that especially for the kinematic regions under study, which typically concentrate on high-\pt objects, a sufficient number of events is generated. \\
+In order to study signal events, two different processes are generated with \textsc{Madgraph5} and showered with \textsc{Pythia6}. On the one hand direct stop-pair production is considered in which the $\tilde{t}$ always decays to a stable neutralino $\tilde{\chi}_{0}^{1}$ and a top quark with mass $m_{t} = 172.5$\gev including all decay channels of the top quark. These samples are generated with different neutralino masses of 50, 100, 150, 200, 250, 300 and 350\gev. On the other hand gluino-pair production is generated with a decay $\tilde{g} \rightarrow \ttbar \tilde{\chi}_{0}^{1}$. For the top quark, only fully hadronic decays are simulated. The cross section given in Tab.~\ref{tab:stop_samples} for gluino-pair production is corrected for the hadronic branching fraction of the top quark. The neutralino mass is fixed to 50\gev. \\
+All samples are normalized to an integrated luminosity of 19.5\fbinv which corresponds to the same integrated luminosity as recorded at $\sqrt{s} =8$\tev.
 
 \section{Sensitivity of a Basic Selection using \HT and \met}
 \label{sec:stop_baseline}
@@ -145,18 +145,17 @@ In the following, an analysis strategy close to the one described in Chap.~\ref{
 %\fontsize{10 pt}{1.2 em}
 %\selectfont
 \centering
-\caption{Exclusive search regions used in the analysis binned in \HT and \met.}
-\begin{tabular}{l|c}
-\multicolumn{2}{c}{} \\
+\caption{Exclusive search regions (SR) used in the analysis binned in \HT and \met.}
+\begin{tabular}{lll}
+\multicolumn{3}{c}{} \\
   \toprule
-               & \met [\gev]    \\
+  SR1 &  $500 < \HT < 1000$\gev  & $200 < \met < 400$\gev  \\                  
   \midrule
-   \HT $= 500$--$1000$\gev  & 200--400  \\
-                          & $>$ 400  \\
-  \midrule
-   \HT $>$ 1000\gev  & 200--400  \\
-                 & $>$ 400  \\
-                   
+  SR2 &  $500 < \HT < 1000$\gev  & $400\gev < \met$  \\ 
+  \midrule 
+  SR3 &  $1000\gev < \HT$  & $200 < \met < 400$\gev  \\ 
+  \midrule     
+  SR4 &  $1000\gev < \HT$  & $400\gev < \met$  \\                
   \bottomrule
 \end{tabular}
 \label{tab:stop_excl_search_bins}
@@ -174,7 +173,7 @@ Based on the selected event yields and the estimated uncertainties, the 95\% con
 \begin{figure}[!h]
   \centering
   \begin{tabular}{c}
-                \includegraphics[width=0.49\textwidth]{figures/limitplot4BinSel_Baseline.pdf} 
+                \includegraphics[width=0.49\textwidth]{figures/limitplot4BinSel_Baseline_LSP50.pdf} 
   \end{tabular}
   \caption{Expected 95\% upper limit for signal strength versus $m_{\tilde{t}}$. The LSP mass is chosen to be 50\gev.}
   \label{fig:stop_baseline_limit}
@@ -504,5 +503,5 @@ In general, the conclusions found in previous sections also hold for the two dim
   \label{fig:stop_2Dlimit}
 \end{figure}
 \\
-Nonetheless, it has to be kept in mind that the studies shown here, have been made with some simplified assumptions, as discussed in Sec.~\ref{sec:stop_samples}. Thus, the absolute expected analysis reach might be better or worse by some 10\gev than found in these studies. However, it is expected that those simplifications affect the various selections studied in this chapter in a similar manner, such that the sensitivity of various selections relative to each other should not be affected by this. Hence, the general conclusions stay valid and data at $\sqrt{s} = 13$\tev will shed light on the question if there is a realization of supersymmetry manifesting in top squarks below the TeV mass range.   
-%However, when deciding on a particular analysis strategy for direct stop production at $\sqrt{s} = 13$\tev it has to be kept in mind that the studies presented here, are based on some simplifications.  The pileup scenario considered in the simulation is not the actual expected situation during the next running period, but uses the pileup conditions form $\sqrt{s} = 8$\tev. As discussed already in Sec.~\ref{sec:stop_samples} this should in principle not affect the analysis shown here too much. Furthermore, the samples have been processed based on the fast detector simulation only. Although this has shown a comparable performance to the full simulation for several quantities in the past, as discussed in Sec.~\ref{sec:sim_detector}, no dedicated studies have been performed yet if those holds also for all jet substructure variables used for the top tagging algorithms. Nevertheless, the derived efficiency and misidentification rates shown in Fig.~\ref{fig:stop_top_eff} show a similar performance to those quantities at $\sqrt{s} = 8$\tev (cf. Sec.~\ref{sec:boosted_tops}). Consequently, the performance improvement of the analysis due to an employment top tagging is expected to be estimated at the correct order of magnitude. In addition to those simplified assumptions also the considered uncertainties for the different background processes are based on ad hoc assumptions. Although they have been chosen in correspondence to the considered uncertainties in~\cite{CMS-PAS-SUS-13-015}, it is not yet studied how precisely the individual background contributions can be estimated for the extreme kinematic regions targeted by the top tagging selections when employing a still to be defined data-based background estimation procedure. Since though all those simplifications affect the various selections studied in this chapter in a similar manner, the sensitivity of various selections relative to each other should not be affected by this. Nevertheless, However, as discussed above most of the simplifications should have only a minor impact on the presented selections. Consequently, the expected data at $\sqrt{s} = 13$\tev supposably further shed light on the question of a realization of natural supersymmetry in data manifesting in top squarks below the \tev mass range. 
+Nonetheless, it has to be kept in mind that the studies shown here, have been made with some simplified assumptions, as introduced in Sec.~\ref{sec:stop_samples}. The pileup scenario considered in the simulation is not the actual expected situation during the next running period, but uses the pileup conditions form $\sqrt{s} = 8$\tev. As discussed already in Sec.~\ref{sec:stop_samples} this should in principle not affect the analysis shown here too much. Furthermore, the samples have been processed based on the fast detector simulation only. Although this has shown a comparable performance to the full simulation for several quantities in the past, as discussed in Sec.~\ref{sec:sim_detector}, no dedicated studies have been performed yet if those holds also for all jet substructure variables used for the top tagging algorithms. Nevertheless, the derived efficiency and misidentification rates shown in Fig.~\ref{fig:stop_top_eff} show a similar performance to those quantities at $\sqrt{s} = 8$\tev (cf. Sec.~\ref{sec:boosted_tops}). Consequently, the performance improvement of the analysis due to an employment of top tagging is expected to be estimated at the correct order of magnitude. In addition to those simplifications, also the considered uncertainties for the different background processes are based on ad hoc assumptions. Although they have been chosen in correspondence to the considered uncertainties in~\cite{CMS-PAS-SUS-13-015}, it is not yet studied how precisely the individual background contributions can be estimated for the extreme kinematic regions targeted by the top tagging selections when employing a data-based background estimation procedure which still has to be defined. Thus, the absolute expected analysis reach might be better or worse by some 10\gev than found in these studies. However, as stated in Sec.~\ref{sec:stop_samples} the main goal of the studies was to identify general concepts and suitable selection criteria. Since it is expected that employed simplifications affect the various selections studied in this chapter in a similar manner, the sensitivity of the selections relative to each other is reflected correctly. Hence, the general conclusions stay valid and data at $\sqrt{s} = 13$\tev will shed light on the question if there is a realization of supersymmetry manifesting in top squarks below the TeV mass range.   
+
